Polis index.html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ function switchSection(id) {
         <option>Evet</option>
         <option>Hayır</option>
       </select>
-      <button type="submit">Katıl</button>
+      <button type="submit">Katıl</https://Yusdjaj.github.io/polisrp-v1/>
     </form>
   </div>
 </section>
